Update openapi schema.
